--- a/src/RippleImage.css
+++ b/src/RippleImage.css
@@ -39,7 +39,7 @@
   bottom: 50px;
   right: 80px;
   font-family: 'Open Sans', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   color: var(--main-color);
   text-align: left;
   max-width: 500px;
@@ -74,6 +74,7 @@
     font-size: 24px;
     top: 320px;
     line-height: 50px;
+   
   }
 
   .mainParagraph {
@@ -81,6 +82,7 @@
     bottom: 30px;
     right: 40px;
     max-width: 90%;
+     bottom: 70px;
   }
 
   .mainButton {
