--- a/src/Contact.css
+++ b/src/Contact.css
@@ -14,7 +14,6 @@
 
 .leftColumn {
   padding-top: 190px;
-  padding-left: 60px;
 }
 
 .rightColumn {
@@ -54,8 +53,7 @@
   margin-left: 10px;
 }
 
-/* Title Styling */
-.contactTitle {
+#contactTitle {
   font-family: "Newsreader", serif;
   font-size: 116px;
   color: white;
@@ -78,8 +76,9 @@ p {
   background-color: transparent !important; 
 }
 
-/* Tablet Styles */
-@media (max-width: 1026px) {
+
+/* Tablet and iPad Pro Styles */
+@media (max-width: 1366px) and (min-width: 768px) {
   .rightOverlay {
     position: absolute; /* Make sure it's behind */
     top: 0;
@@ -95,7 +94,55 @@ p {
     background-color: rgba(255, 255, 255, 0.65);
   }
 
-  .contactTitle {
+  #contactTitle {
+    font-size: 70px;
+    margin-bottom: 15px;
+    position: relative; /* Add relative positioning */
+    z-index: 2; /* Bring it in front of the overlay */
+    text-align: center;
+    color: #002A3C;
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    padding-top: 30px;
+  }
+
+  .contactItem {
+    justify-content: center;
+  }
+
+  .contactItem a {
+    margin-left: 10px;
+    text-align: center;
+  }
+}
+
+
+
+
+
+/* Tablet Styles */
+@media (max-width: 1024px) {
+  .rightOverlay {
+    position: absolute; /* Make sure it's behind */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0; /* Set low so H1 can be above */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.65);
+
+  }
+
+ #contactTitle {
     font-size: 60px;
     margin-bottom: 15px;
     position: relative; /* Add relative positioning */
@@ -140,7 +187,8 @@ p {
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.65);
   }
- .contactTitle {
+
+#contactTitle {
     position: relative; /* Add relative positioning */
     z-index: 2; /* Bring it in front of the overlay */
     font-size: 50px;
