--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,7 +1,4 @@
 
-
-/* Background Section */
-
 .contactBackground {
   background-size: cover;
   background-position: center;
@@ -14,32 +11,16 @@
 
 .leftColumn {
   padding-top: 190px;
-  padding-left: 60px;
 }
 
-.rightColumn {
-  padding-top: 190px;
-  padding-left: 60px;
-}
 
-/* Overlay Panel */
 .rightOverlay {
   background-color: rgba(255, 255, 255, 0.65);
   padding: 190px 60px 60px 60px;
-    z-index: 0; /* already fine */
+    z-index: 0; 
 
 }
 
-.contactIntro {
-  margin-bottom: 50px;
-    padding-left: 30px;
-    padding-top: 50px;
-
-}
-
-.contactInfo {
-  margin-bottom: 30px;
-}
 
 .contactItem {
   display: flex;
@@ -51,35 +32,55 @@
   color: #002A3C;
   font-family: "Open Sans", sans-serif;
   text-decoration: underline;
-  margin-left: 10px;
 }
 
-/* Title Styling */
+
 .contactTitle {
   font-family: "Newsreader", serif;
-  font-size: 116px;
+  font-size: 96px;
   color: white;
-  text-align: left;
   line-height: 1.1;
   margin-bottom: 20px;
+  padding-left: 70px;
 }
 
-/* Paragraph Styling */
-p {
-  font-family: 'Open Sans', sans-serif;
+.contactIntro p {
+  margin-bottom: 50px;
+    padding-left: 20px;
+    padding-right: 30px;
+     font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   color: #002A3C;
-  text-align: left;
+  text-align: center;
   line-height: 1.6;
+  padding-top: 0px;
 }
-
 
 #contact-header {
   background-color: transparent !important; 
 }
 
+
+
+  /* Your iPad Pro-specific styles here */
+@media screen and (min-width: 1025px) and (max-width: 1366px) {
+
+.contactTitle {
+  
+  font-size: 70px;
+  padding-left: 30px;
+}
+}
+
+
+
+
+
 /* Tablet Styles */
-@media (max-width: 1026px) {
+
+
+
+@media (max-width: 1024px) {
   .rightOverlay {
     position: absolute; /* Make sure it's behind */
     top: 0;
@@ -102,15 +103,19 @@ p {
     z-index: 2; /* Bring it in front of the overlay */
     text-align: center;
     color: #002A3C;
+      padding-left: 0px;
+  
+    
   }
   
 }
 
- p {
+ .contactIntro p {
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
-     padding-top: 70px;
+
+
   }
 
  .contactItem {
@@ -121,6 +126,18 @@ p {
     margin-left: 10px;
     text-align: center;
   }
+
+
+
+@media screen and (width: 1024px) and (height: 600px) {
+  /* Nest Hub-specific overrides go here */
+ .contactIntro p {
+  
+    padding-top: 90px;
+  }
+  
+}
+
 
 
 
@@ -147,13 +164,14 @@ p {
     text-align: center;
     margin-bottom: 20px;
     color: #002A3C;
+      padding-left: 0px;
   }
 
-  p {
+  .contactIntro p {
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 70px;
   }
 
   .contactItem {
@@ -161,7 +179,7 @@ p {
   }
 
   .contactItem a {
-    margin-left: 10px;
+
     text-align: center;
   }
 }
